[tool.poetry]
name = "algorithm-prac"
version = "0.1.0"
description = ""
authors = ["bkkhyunn <toiquen419@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.1.0"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
